compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case_clause_guards__tuple_index.snap
---
source: compiler-core/src/go/tests/case_clause_guards.rs
expression: "pub fn main(x, xs: #(Bool, Bool, Bool)) {\n  case x {\n    _ if xs.2 -> 1\n    _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(x, xs: #(Bool, Bool, Bool)) {
  case x {
    _ if xs.2 -> 1
    _ -> 0
  }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main[I gleam_P.Type[I]](
  x I,
  xs gleam_P.Tuple3_t[gleam_P.Bool_t, gleam_P.Bool_t, gleam_P.Bool_t],
) gleam_P.Int_t {
  if xs.P_2 {
    return 1
  } else {
    return 0
  }
}
